# auto-Tronclass-APP

./: .gitignore  AGENTS.md  LICENSE  README.md  build-core.ps1  package-windows.ps1
core/: Cargo.toml  build.rs
core/src/: answer.rs  config.rs  course_context.rs  engine.rs  fake.rs  keystore.rs  lib.rs  live_test.rs  llm.rs  login.rs  monitor.rs  protocol.rs  providers.rs  quiz.rs  r1_test.rs  r2_test.rs  r3a_test.rs  r3b_test.rs  r4_test.rs  r5_test.rs  radar.rs  redaction.rs  rollcall.rs  seam_test.rs  secrets.rs  slice1_test.rs  slice2_test.rs  slice3_test.rs  slice4_test.rs
core/src/assets/: providers.seed.json
docs/: 00-overview.md  10-architecture.md  20-contract.md  30-domain-rollcall.md  31-domain-autoanswer.md  32-domain-qr.md  40-providers.md  50-build-order.md  60-ui-ia.md  70-radar-solver.md  90-conventions.md  FABLE-HANDOFF.md
smoke/: Program.cs  Smoke.csproj
ui/: App.xaml  App.xaml.cs  AppShell.cs  AppShell.xaml  AppShell.xaml.cs  Controls.cs  MainPage.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Theme.cs  Ui.csproj
ui/Interop/: Core.cs  ICore.cs  MockCore.cs  NativeCore.cs  NativeMethods.g.cs
ui/Pages/: AccountsPage.cs  AddAccountPage.cs  DashboardPage.cs  HomePage.cs  ModalPages.cs  QuizPages.cs  RollcallPages.cs  SettingsPage.cs  UnlockPage.cs
ui/Resources/Styles/: Colors.xaml  Styles.xaml
ui/State/: AppState.cs  Models.cs
