[package]
name = "tronclass-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[lib]
# Output artifact name → tronclass_core.dll / libtronclass_core.so.
# NOT "core": that shadows the std `core` crate. DllImport("tronclass_core") follows this name.
name = "tronclass_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "io-util", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "json"] }
reqwest_cookie_store = "0.8"      # serializable cookie jar → cache/restore a session
cookie_store = "0.21"             # (used directly for save/load of the session)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Vault (security boundary — docs 90 §7, not simplified):
chacha20poly1305 = "0.10"          # XChaCha20-Poly1305 AEAD
argon2 = "0.5"                     # Argon2id KDF from the master password
zeroize = "1"                      # wipe the derived key on lock
getrandom = "0.2"                  # OS CSPRNG for salt + per-write nonce
# Login form parsing (protocol boundary — carry hidden CSRF inputs verbatim).
# tl: one small pure-Rust HTML parser; lenient on malformed pages. (Not scraper — that pulls
# html5ever/selectors/cssparser and is heavier to compile across four ABIs, with no benefit here.)
tl = "0.7"

[build-dependencies]
csbindgen = "1"

[features]
# The in-repo fake TronClass server is dev/test-only; the shipped cdylib never contains it.
fakeserver = []

[[bin]]
name = "fake_tronclass"
required-features = ["fakeserver"]
