[package]
name = "tronclass-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[lib]
# Output artifact name → tronclass_core.dll / libtronclass_core.so.
# NOT "core": that shadows the std `core` crate. DllImport("tronclass_core") follows this name.
name = "tronclass_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "io-util", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "json"] }
reqwest_cookie_store = "0.8"      # serializable cookie jar → cache/restore a session
cookie_store = "0.21"             # (used directly for save/load of the session)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Vault: at-rest encryption of stored secrets, auto-unlocked with a per-device key (no password).
chacha20poly1305 = "0.10"          # XChaCha20-Poly1305 AEAD
zeroize = "1"                      # wipe the device key on lock
getrandom = "0.2"                  # OS CSPRNG for the device key + per-write nonce
# Login form parsing (protocol boundary — carry hidden CSRF inputs verbatim).
# tl: one small pure-Rust HTML parser; lenient on malformed pages. (Not scraper — that pulls
# html5ever/selectors/cssparser and is heavier to compile across four ABIs, with no benefit here.)
tl = "0.7"
# Beacon radarSignal hash (docs/70 §1) — a small pure-Rust hash, not a math dependency.
md-5 = "0.10"
# PDF text extraction for the course-material tool (R5). Pure-Rust (lopdf/encoding_rs) → cross-compiles to
# the 4 Android ABIs. A scanned/no-text-layer PDF returns empty → graceful "（無法取得內文）" degrade.
pdf-extract = "0.7"

[build-dependencies]
csbindgen = "1"

[features]
# The in-repo fake TronClass server is dev/test-only; the shipped cdylib never contains it.
fakeserver = []

[[bin]]
name = "fake_tronclass"
required-features = ["fakeserver"]

# 信條：小巧＝一般情況的最高宗旨，只有「真衝突」才讓給速度/清晰。此核心 I/O-bound，
# opt-z 對速度無實質衝突 → 選最小的 z。strip/lto/panic=abort 不犧牲速度也能縮小；panic 不跨 FFI 故 abort 正確。
[profile.release]
opt-level = "z"     # 最小；I/O-bound 核心 opt-z 對速度無實質衝突 → 小巧優先
lto = true          # link-time optimization：速度與大小通常都更好
codegen-units = 1   # 更佳最佳化、更小
strip = true        # 去除符號
panic = "abort"     # 無 unwinding 表 → 更小、且 panic 不跨 FFI 故 abort 正確
